--- a/backend/payments/src/main/resources/application.properties
+++ b/backend/payments/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=9000
+server.port=8086
 spring.datasource.url=jdbc:mysql://localhost:3306/payments?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=Pintu@25
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
