--- a/backend/payments/pom.xml
+++ b/backend/payments/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
