--- a/backend/payments/src/main/resources/application.properties
+++ b/backend/payments/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8090
+server.port=8091
 spring.datasource.url=jdbc:mysql://localhost:3306/payments?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=toor
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
