--- a/backend/payments/src/main/resources/application.properties
+++ b/backend/payments/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port=8086
->>>>>>> bf2c46464250f658f3982bda45228bf7c4f0c996
 spring.datasource.url=jdbc:mysql://localhost:3306/payments?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.password=Pintu@25
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
