--- a/backend/payments/src/main/resources/application.properties
+++ b/backend/payments/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/payments?characterEncoding=utf
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=Pintu@25
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
